[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Recicle.gd" type="Script" id=1]
[ext_resource path="res://scenes/Esteira.tscn" type="PackedScene" id=2]
[ext_resource path="res://audio/spaceEngineSmall_000b.ogg" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.839216 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/LiberationSerif-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
use_filter = true
extra_spacing_char = 11
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Recicle" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Fundo"]
margin_right = 360.0
margin_bottom = 106.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="Fundo"]
margin_top = 106.0
margin_right = 360.0
margin_bottom = 212.0
color = Color( 0.843137, 0.811765, 0.0117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="Fundo"]
margin_top = 213.0
margin_right = 360.0
margin_bottom = 319.0
color = Color( 0.286275, 0.219608, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="Fundo"]
margin_top = 320.0
margin_right = 360.0
margin_bottom = 426.0
color = Color( 0.121569, 0.219608, 0.686275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="Fundo"]
margin_top = 427.0
margin_right = 360.0
margin_bottom = 533.0
color = Color( 0.737255, 0.113725, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect7" type="ColorRect" parent="Fundo"]
margin_top = 534.0
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0.105882, 0.643137, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Fundo"]
margin_left = 103.0
margin_right = 263.0
margin_bottom = 640.0
color = Color( 0.176471, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect9" type="ColorRect" parent="Fundo"]
margin_left = 108.0
margin_right = 258.0
margin_bottom = 640.0
color = Color( 0.32549, 0.32549, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect8" type="ColorRect" parent="Fundo"]
margin_left = 180.0
margin_right = 187.0
margin_bottom = 640.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Fundo"]
margin_left = 14.0
margin_top = 150.0
margin_right = 67.0
margin_bottom = 170.0
text = "Metal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="Fundo"]
margin_left = 16.0
margin_top = 261.0
margin_right = 99.0
margin_bottom = 281.0
text = "Orgânico"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="Fundo"]
margin_left = 14.0
margin_top = 567.0
margin_right = 97.0
margin_bottom = 587.0
text = "Vidro"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel5" type="RichTextLabel" parent="Fundo"]
margin_left = 14.0
margin_top = 470.0
margin_right = 97.0
margin_bottom = 490.0
text = "Plástico"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel6" type="RichTextLabel" parent="Fundo"]
margin_left = 14.0
margin_top = 369.0
margin_right = 97.0
margin_bottom = 389.0
text = "Papel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Fundo"]
margin_left = 8.0
margin_top = 48.0
margin_right = 103.0
margin_bottom = 68.0
text = "Não Reciclavel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Esteira" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Pontos" type="RichTextLabel" parent="."]
margin_left = 313.0
margin_top = 8.0
margin_right = 356.0
margin_bottom = 27.0
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontos2" type="RichTextLabel" parent="."]
margin_left = 266.0
margin_top = 8.0
margin_right = 335.0
margin_bottom = 44.0
text = "Pontos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tempo" type="RichTextLabel" parent="."]
margin_left = 61.0
margin_top = 11.0
margin_right = 98.0
margin_bottom = 26.0
text = "000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tempo2" type="RichTextLabel" parent="."]
margin_left = 9.0
margin_top = 10.0
margin_right = 64.0
margin_bottom = 36.0
text = "Tempo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.152
autoplay = true

[node name="Final" type="Node2D" parent="."]
z_index = 1

[node name="Panel" type="Panel" parent="Final"]
margin_left = 13.0
margin_top = 157.0
margin_right = 349.0
margin_bottom = 468.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Final"]
margin_left = 31.0
margin_top = 277.0
margin_right = 333.0
margin_bottom = 338.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 0.627451, 1, 0.521569, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "REINICIAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="Final"]
margin_left = 30.0
margin_top = 358.0
margin_right = 334.0
margin_bottom = 426.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 0.627451, 1, 0.521569, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "VOLTAR"

[node name="Pontos4" type="RichTextLabel" parent="Final"]
margin_left = 106.0
margin_top = 209.0
margin_right = 271.0
margin_bottom = 256.0
custom_fonts/normal_font = SubResource( 2 )
text = "Pontos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontos" type="RichTextLabel" parent="Final"]
margin_left = 53.0
margin_top = 168.0
margin_right = 322.0
margin_bottom = 214.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]00[/center]"
text = "00"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="button_up" from="Final/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="Final/Voltar" to="." method="_on_Voltar_button_up"]
